# dee-fin

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
carve/: __init__.py  allocation.py  candidates.py  datasets.py  encoder.py  p2_heads.py  p2_runner.py  p3_apcc_v4.py  p3_mention_crf.py  p3_planner.py  p3_planner_only_runner.py  p3_runner.py  p5b_runner.py  text_segmentation.py  tokenization.py
configs/relations/: ablation_grpo_no_consistency.yaml  ablation_grpo_no_grounding.yaml  ablation_no_consistency.yaml  ablation_no_debate.yaml  ablation_no_edge_admission.yaml  ablation_no_grounding.yaml  ablation_no_verifier.yaml  baseline_single_llm.yaml  ccks_causal_zh.yaml  crc_edge_admission.yaml  grpo_rlvr.yaml  grpo_rlvr_colocate.yaml  grpo_rlvr_easy.yaml  grpo_rlvr_hf.yaml  grpo_rlvr_smoke.yaml  grpo_rlvr_smoke_vllm.yaml  heuristic_astock_entity.yaml  heuristic_baseline.yaml  llm_grounded_consistent.yaml  llm_smoke.yaml  multiagent_grounded.yaml  supervised.yaml
data/: README.md
data/raw/: DATA_PROVENANCE.md
docs/: DATASETS.md  DATASET_SURVEY.md  ENGINEERING_NOTES.md  EXPERIMENTS.md  GPU_RUNBOOK.md  OVERVIEW.html  PIPELINE.md  SPEC.md  TODO.md  事件图谱构建研究进展.md
docs/archive/: ARCHITECTURE.md  BENCHMARK_SURVEY.md  CLOSED_LOOP.md  HANDOFF_2026-07-10.md  HANDOFF_2026-07-11.md  MIDTERM_HANDOFF.md  NOVELTY_A1_2026-07-11.md  NOVELTY_CSCRP_2026-07-11.md  OUTLINE.md  README.md  RESEARCH_MAP.md  RISK_CONTROL_DESIGN.md  RL_DESIGN.md  SERVER_W3-4_RUNBOOK.md  SETUP.md  THESIS_DESIGN.md  THESIS_REDESIGN_2026-07-10.md  UPGRADE_PROMPT_2026-07-09.md
docs/diagnostics/: current_stage_handoff.md  p5b_carve_alloc_breakdown.json  p5b_carve_alloc_breakdown.md  p5b_fp_breakdown.json  p5b_fp_breakdown.md  p5b_fp_breakdown_r3typegate.json  p5b_fp_breakdown_r3typegate.md  p5b_threshold_sweep_2026_05_15.md
docs/evaluator/: EVALUATION_PROTOCOL_RATIONALE.md  EVALUATION_REPORTING_PROTOCOL.md  METRIC_TABLE_TEMPLATES.md  MULTI_VALUE_ROLE_AUDIT.md  multi_value_role_audit_results.json
docs/measurements/: p1_memory.md  p1_memory_template.md  p2_duee_fin_seed42_acceptance.md  p5b_decision_table_template.md  p5b_duee_fin_dev500_r3typegate.md  p5b_duee_fin_dev500_seed42.md  r3_planner_only_duee_fin_seed42_v2_1.md  r3_planner_only_duee_fin_seed42_v3.md  r3_planner_only_duee_fin_seed42_v4.md  r3_planner_only_duee_fin_seed42_v5.md
docs/method/: README.md  carve_method_design_v1_3.md  easv_v1.md
docs/phase/: README.md  p0_documentation_freeze.md  p1_memory_measurement_plan.md  p2_evidence_pointer_plan.md  p3_mention_planner_plan.md  p3_replan.md  p4_allocation_toy_validation_plan.md  p5a_edag_toy_gate_plan.md  p5b_dev_diagnostic_gate_plan.md  p5b_duee_fin_first_long_train.md  p5b_planner_integration_plan.md  r3_v3_sentence_count_plan.md  r3_v5_plan.md  stage_summary_2026_05_15.md  venue_decision_2026_05_15.md
docs/phases/: PHASE_A_ch2_supervised_extractor.md  PHASE_B_ch2_consistency_repair_riskadmit.md  PHASE_C2_ch1_crossdoc.md  PHASE_C_ch1_canonical_nodes.md  PHASE_D_ch3_factuality_purification.md  PHASE_E_ch4_closedloop_propagation.md  PHASE_F_end2end_budget.md  PHASE_G_financial_layer.md  PHASE_H_robustness_novelty.md  README.md
evaluator/: __init__.py  __main__.py
evaluator/canonical/: grouping.py  loaders.py  normalize.py  schema.py  stats.py
evaluator/docfee_official/: metric.py  report.py  schema.py
evaluator/unified_strict/: __init__.py  diagnostics.py  matcher.py  metric.py
scripts/: _patch_vllm_nvml.py  build_cgep.py  convert_ccks_tianchi.py  download_datasets.py  evaluate_cgep.py  evaluate_cgep_cross_stage.py  evaluate_cgep_selective.py  evaluate_relation_pairs.py  evaluate_relations.py  nvml_hide_faulted_gpu.c  preprocess_datasets.py  profile_cgep_step.py  recompute_relation_metrics.py  run_sarge_news_inference.py  sarge_to_event_nodes.py  train_relation_extractor.py  train_relation_grpo.py  train_supervised_relations.py
scripts/carve/: measure_encoder_memory.py  p5b_carve_alloc_diagnostic.py  p5b_fp_diagnostic.py  run_p2_evidence_pointer.py  run_p3_mention_planner.py  run_p4_p5a_toy_validation.py  run_p5b_diagnostic.py  run_r3_planner_only.py
scripts/data_split/: prepare_all_splits.py  prepare_chfinann.py  prepare_docfee.py  prepare_duee_fin.py  split_utils.py
scripts/evaluator/: audit_multi_value_roles.py  compare_fixed_slot_vs_canonical_units.py
src/finekg/: __init__.py  cli.py
tests/: conftest.py
tests/agents/: test_orchestrator.py
tests/carve/: test_allocation.py  test_p2_heads.py  test_p3_argument_coreference.py  test_p3_candidates_integration.py  test_p3_mention_crf.py  test_p3_planner.py  test_p5b_runner.py  (+1 more)
(+161 files in other folders)
